; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_acquire_lock.c_DeadlineTimestampTzToTimeout.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_acquire_lock.c_DeadlineTimestampTzToTimeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @DeadlineTimestampTzToTimeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @DeadlineTimestampTzToTimeout(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i64 0, i64* %3, align 8
  store i32 0, i32* %4, align 4
  %5 = call i32 (...) @GetCurrentTimestamp()
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @TimestampDifference(i32 %5, i32 %6, i64* %3, i32* %4)
  %8 = load i64, i64* %3, align 8
  %9 = mul nsw i64 %8, 1000
  %10 = load i32, i32* %4, align 4
  %11 = sdiv i32 %10, 1000
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %9, %12
  ret i64 %13
}

declare dso_local i32 @TimestampDifference(i32, i32, i64*, i32*) #1

declare dso_local i32 @GetCurrentTimestamp(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
